refactor: Update project branding from Plex Requests to MRS
- Update README.md with new project name and GitHub URLs
- Rename project to MRS (Media Request System) throughout
- Update Go module name to github.com/jacob-fain/MRS
- Update all import statements in Go files
- Rename Docker containers (mrs-db, mrs-backend, mrs-frontend)
- Update database credentials and connection strings
- Update frontend package name to mrs-frontend
- Update service name in health endpoint to mrs-api
- Update CLAUDE.md documentation with new naming

All references to old project name have been updated while
maintaining full functionality and code structure.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL=postgres://plexrequests:plexrequests123@localhost:5432/plexrequests?sslmode=disable
+DATABASE_URL=postgres://mrssystem:mrs123@localhost:5432/mrssystem?sslmode=disable
 
 # JWT
 JWT_SECRET=your-secret-key-change-in-production
