--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
     ports:
       - "19080:8080"
     environment:
-      DATABASE_URL: postgres://mrssystem:mrs123@postgres:5432/mrssystem?sslmode=disable
+      DATABASE_URL: ${DATABASE_URL}
       JWT_SECRET: ${JWT_SECRET}
       PORT: ${PORT}
       GIN_MODE: ${GIN_MODE}
