--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       PORT: ${PORT}
       GIN_MODE: ${GIN_MODE}
       TMDB_API_KEY: ${TMDB_API_KEY}
+      OMDB_API_KEY: ${OMDB_API_KEY}
       PLEX_SERVER_URL: ${PLEX_SERVER_URL}
       PLEX_TOKEN: ${PLEX_TOKEN}
     volumes:
